Created hide-mobile and show-mobile utility classes

--- a/public/budget-results.html
+++ b/public/budget-results.html
@@ -318,8 +318,8 @@
               <p> Total monthly income: <strong>incomeTotal</strong><br>Total spending: <strong>spendingTotal</strong></p>
               <h3>You are spending [OverAmount] more than your income</h3>
               <h3>You are spending [UnderAmount] less than your income</h3>
-              <div id="desktop-chart" style="min-width: 310px; margin: 0 auto;"></div>
-              <div id="mobile-chart" style="min-width: 310px; margin: 0 auto;"></div>
+              <div id="desktop-chart" style="min-width: 310px; margin: 0 auto;" class="hide-mobile"></div>
+              <div id="mobile-chart" style="min-width: 310px; margin: 0 auto;" class="show-mobile"></div>
               <div class="collapse collapsible">
                 <div class="collapse-toggle">See a detailed breakdown of your income and spending</div>
                 <div class="collapse-content">
