--- a/public/budget-results.html
+++ b/public/budget-results.html
@@ -44,7 +44,7 @@
       		},
       		plotOptions: {
       			pie: {
-      				allowPointSelect: true,
+      				allowPointSelect: false,
       				cursor: 'pointer',
       				dataLabels: {
       					enabled: true
