Links long-form

--- a/public/long-form.html
+++ b/public/long-form.html
@@ -118,6 +118,7 @@
                 <div class="callout--warning">
                   <p>If you don’t get the permission or approval you need, you could be fined, prosecuted or made to pay to put things right.</p>
                 </div><a href="#" class="back-to-top">Back to Top</a>
+                </div><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step2">
                 <h2 class="ref-heading"><span class="ref-heading__heading">Step 2: Find good builders or contractors</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
@@ -169,6 +170,7 @@
                   <li>a list of questions to help you get all the information you need to compare and choose between contractors - Trustmark has <a href="#">questions you can use as a checklist</a></li>
                 </ul>
                 <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p>
+                <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step3">
                 <h2 class="ref-heading"><span class="ref-heading__heading">Step 3: Get quotes before you decide who to use</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
@@ -211,6 +213,7 @@
                 </div>
                 <h4>See a sample quote</h4>
                 <p>You can download a PDF of a <a href="#">sample quote</a>.</p>
+                <p>You can download a PDF of a <a href="#">sample quote</a>.</p><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step4">
                 <h2 class="ref-heading"><span class="ref-heading__heading">Step 4: Check there’s insurance in place</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
@@ -232,6 +235,7 @@
                 <div class="callout">
                   <p>If you don’t have home and contents insurance, it’s worth getting some before the work starts - there’s a bigger risk your home will be damaged or your things stolen while work’s going on.</p>
                 </div>
+                </div><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step5">
                 <h2 class="ref-heading"><span class="ref-heading__heading">Step 5: Get a written contract</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
@@ -307,6 +311,7 @@
                   <h3>Further help</h3>
                   <p>Contact the <a href="#">Citizens Advice consumer helpline</a> if you need more help - a trained adviser can give you advice over the phone or by email. Contact the Consumerline if you're in <a href="#">Northern Ireland</a>.</p>
                 </div>
+                </div><span class="back-to-top-icon"><a href="#overview">Back to overview</a></span>
               </section>
               <section id="step6">
                 <h2 class="ref-heading"><span class="ref-heading__heading">Step 6: Be prepared to deal with problems</span><span class="ref-heading__toggle ref-heading__toggle--off"><a href="#!" class="js-toggle-ref">Add reference</a></span></h2>
