Added real table rows into breakdown

--- a/public/budget-results.html
+++ b/public/budget-results.html
@@ -536,25 +536,365 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td>Health, eg medicines/treatments</td>
-                    <td class="amount">£70.50</td>
+                  <tr class="table-collapse--toggle">
+                    <td>Bills</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Rent or mortgage</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Council Tax / Rates</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Buildings and contents insurance</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Gas and electricity</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Water</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>TV licence</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr class="table-collapse--toggle">
+                    <td>Household</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Grocery shopping (include food, drinks, toiletries and cleaning supplies etc)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Work lunches and coffees, teas etc</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Cigarettes and tobacco</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Alcohol (bought from an off-licence or shop but not from the pub, bar or restaurant)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Clothing and footwear</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Repairs and house maintenance</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Hire purchases or conditional sale items (eg a sofa or TV paid in monthly instalments)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Haircuts</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Laundrette</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Medicines (including prescription charges)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Dentistry</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Insurance (life or home, but not travel)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr class="table-collapse--toggle">
+                    <td>Leisure</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Meals and drinks out</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Memberships (eg gym or cinema membership)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Magazines and newspapers</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Books or music (in any format)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Website subscriptions (eg news, dating or music/video streaming websites)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Season tickets</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Cinema or theatre tickets</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Holiday (include cost of travel, accommodation, expenses while you’re there and travel insurance) </td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Cigarettes or other tobacco</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Lottery and pools</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr class="table-collapse--toggle">
+                    <td>Travel</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Public transport (including season tickets)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Taxis </td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Bicycle (including running costs such as repair or rental)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Car rental (including petrol)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Car hire as purchase payment</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr class="table-collapse--toggle">
+                    <td>Car</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Car insurance</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Road tax</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Fuel</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>MOT</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Car maintenance</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Breakdown or recovery</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Parking/congestion charges</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr class="table-collapse--toggle">
+                    <td>Child</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Childcare</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Child support/maintenance</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Tuition fees</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>School uniform</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>School meals </td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Pocket money and school trips</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Nappies and baby items (if you haven’t already included in groceries)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr class="table-collapse--toggle">
+                    <td>Family</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Adult care (eg care home costs for an elderly relative)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Christmas and birthday presents</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Pet-related expenses (eg vet bills, pet food and insurance)</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr class="table-collapse--toggle">
+                    <td>Debt</td>
+                    <td class="amount">£50.00</td>
+                  </tr>
+                  <tr class="table-collapse">
+                    <td colspan="2">
+                      <table class="budget">
+                        <tbody>
+                          <tr>
+                            <td>Mortgage, rent or any loans secured against your home</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Council Tax</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Credit card, store card debts or payday loans</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Bank or building society loans</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Personal loans</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Catalogue, home credit or in-store credit debts</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Overdrafts </td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Money borrowed from friends or family</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Income Tax, National Insurance and VAT</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Gas and electricity bills</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Child maintenance</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>TV licence</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Hire purchase agreements</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                          <tr>
+                            <td>Court fines</td>
+                            <td class="amount">£0.00</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
                   </tr>
                   <tr>
-                    <td>Savings/investments</td>
-                    <td class="amount">£60.00</td>
-                  </tr>
-                  <tr>
-                    <td>Life insurance</td>
-                    <td class="amount">£20.00</td>
-                  </tr>
-                  <tr>
-                    <td>Health insurance</td>
-                    <td class="amount">£15.00</td>
+                    <td>Savings</td>
+                    <td class="amount">£50.00</td>
                   </tr>
                   <tr class="total">
                     <td>Total</td>
-                    <td class="amount">£165.50</td>
+                    <td class="amount">£450.00</td>
                   </tr>
                 </tbody>
               </table>
