Updates to tools and results

--- a/public/budgeting-tool.html
+++ b/public/budgeting-tool.html
@@ -132,9 +132,16 @@
               <li>
                 <ul>
                   <li class="side-nav-beta__sibling -visited"><a href="#">Start</a></li>
-                  <li class="side-nav-beta__sibling -visited"><a href="#">1. Income</a></li>
-                  <li class="side-nav-beta__sibling -current"><a href="#">2. Benefits</a></li>
-                  <li class="side-nav-beta__sibling"><a href="#">3. Household</a></li>
+                  <li class="side-nav-beta__sibling -current"><a href="#">Income</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">1. Bills</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">2. Household</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">3. Leisure</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">4. Travel</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">5. Car</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">6. Child</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">7. Family</a></li>
+                  <li class="side-nav-beta__sibling"><a href="#">8. Debt</a></li>
+                  <li class="side-nav-beta__sibling -current"><a href="#">Results</a></li>
                 </ul>
               </li>
             </ul>
