--- a/public/budget-results.html
+++ b/public/budget-results.html
@@ -25,7 +25,6 @@
     <script src="../libs/javascript/collapse.js"></script>
     <script src="../libs/vendors/prism/prism.js"></script>
     <script src="../libs/javascript/smooth.js"></script>
-    <!--script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js")-->
     <script src="../libs/javascript/vendor/highcharts/highcharts.js"></script>
     <script src="../libs/javascript/vendor/highcharts/modules/exporting.js"></script>
     <script>
@@ -385,20 +384,8 @@
       		}
       	});
       });
-      
-      $(document).ready(function($) {
-      	$('.table-collapse--toggle').click(function(){
-      		$(this).toggleClass("active");
-      		$(this).next().toggle();
-      	});
-      });
-    </script>
-    <style>
-      .highcharts-button {
-      	//display: none;
-      }
       		
-    </style>
+    </script>
   </head>
   <body><!--[if IE 8]><div class="ie8"><![endif]-->
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
@@ -449,9 +436,9 @@
         <div class="articleContent">
           <div class="main-content__right">
             <h2>Results</h2>
-            <p> Total monthly income: <strong>incomeTotal</strong><br>Total spending: <strong>spendingTotal</strong></p>
-            <h3>You are spending [OverAmount] more than your income</h3>
-            <h3>You are spending [UnderAmount] less than your income</h3>
+            <p> Total monthly income: <strong>£250.00</strong><br>Total spending: <strong>£450.00</strong></p>
+            <h3>You are spending £200 more than your income</h3>
+            <!--h3 You are spending [UnderAmount] less than your income-->
             <div class="well">
               <div id="overview-chart" style="min-width: 300px; margin: 0 auto;"></div>
             </div>
@@ -504,7 +491,7 @@
             </ul>
             <p>Ask <a href="https://www.citizensadvice.org.uk/about-us/how-we-provide-advice/advice/search-for-your-local-citizens-advice/">local Citizens Advice</a> whether they offer these services.</p>
             <h2 id="detailed">Income breakdown</h2>
-            <table class="budget">
+            <table class="full-width">
               <thead>
                 <tr>
                   <th scope="col" colspan="2">Income</th>
@@ -529,7 +516,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Child maintenance or support</td>
@@ -557,7 +544,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Attendance Allowance</td>
@@ -661,7 +648,7 @@
               <div id="income-chart" style="min-width: 310px; margin: 0 auto;"></div>
             </div>
             <h2>Spending breakdown</h2>
-            <table class="budget">
+            <table class="full-width">
               <thead>
                 <tr>
                   <th scope="col" colspan="2">Spending</th>
@@ -674,7 +661,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Rent or mortgage</td>
@@ -710,7 +697,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Grocery shopping (include food, drinks, toiletries and cleaning supplies etc)</td>
@@ -770,7 +757,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Meals and drinks out</td>
@@ -822,7 +809,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Public transport (including season tickets)</td>
@@ -854,7 +841,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Car insurance</td>
@@ -894,7 +881,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Childcare</td>
@@ -934,7 +921,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Adult care (eg care home costs for an elderly relative)</td>
@@ -958,7 +945,7 @@
                 </tr>
                 <tr class="table-collapse">
                   <td colspan="2">
-                    <table class="budget">
+                    <table class="full-width">
                       <tbody>
                         <tr>
                           <td>Mortgage, rent or any loans secured against your home</td>
